--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -43,4 +43,4 @@ jobs:
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/angular-app:latest
 
       - name: Test Deployment
-        run: docker-compose up -d
+        run: docker compose up -d
